--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./test;
+    url: jdbc:h2:file:./blog_app;
     jpa:
       hibernate:
         ddl-auto: create # in prod use update
